# swerve

./: CLAUDE.md  Cargo.toml  GPT_SWARM_REVIEW.md  README.md
fswerve/: Cargo.toml
fswerve/src/: cli.rs  client.rs  config.rs  main.rs  output.rs
swerve/: Cargo.toml
swerve-core/: Cargo.toml
swerve-core/src/: api.rs  crypto.rs  lib.rs  types.rs
swerve/src/: auth.rs  error.rs  lib.rs  main.rs  mgmt.rs  serve.rs  state.rs
swerve/src/routes/: files.rs  mod.rs  sockets.rs
swerve/tests/: integration.rs
