[package]
name = "fswerve"
version = "0.1.0"
edition = "2024"

[dependencies]
swerve-core = { path = "../swerve-core" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
colored = "3"
