[package]
name = "fswerve"
version = "0.1.0"
edition = "2024"

[dependencies]
swerve-core = { path = "../swerve-core" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
colored = "3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
