[package]
name = "swerve"
version = "0.1.0"
edition = "2024"

[dependencies]
swerve-core = { path = "../swerve-core" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
