[package]
name = "swerve"
version = "0.1.0"
edition = "2024"

[dependencies]
swerve-core = { path = "../swerve-core" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
subtle = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
